HB-4172 - Fix for too much margin in NPASignUp when expanding offers

--- a/src/styles/modules/_m-npa-signup.sass
+++ b/src/styles/modules/_m-npa-signup.sass
@@ -38,7 +38,7 @@
       text-align: center
 
   +e(content)
-    margin: auto
+    margin: 0 auto
     padding: 0 27px
 
   +e(steps)
